@@ -16,7 +16,7 @@
 
 #include "portab.h"
 
-static char UNUSED id[] = "$Id: conn.c,v 1.126 2003/11/05 21:41:02 alex Exp $";
+static char UNUSED id[] = "$Id: conn.c,v 1.127 2003/11/05 23:24:48 alex Exp $";
 
 #include "imp.h"
 #include <assert.h>
@@ -120,7 +120,9 @@ Conn_Init( VOID )
 		Log( LOG_EMERG, "Can't allocate memory! [Conn_Init]" );
 		exit( 1 );
 	}
+#ifdef DEBUG
 	Log( LOG_DEBUG, "Allocated connection pool for %d items (%ld bytes).", Pool_Size, sizeof( CONNECTION ) * Pool_Size );
+#endif
 
 	/* zu Beginn haben wir keine Verbindungen */
 	FD_ZERO( &My_Listeners );
@@ -147,7 +149,9 @@ Conn_Exit( VOID )
 	CONN_ID idx;
 	INT i;
 
+#ifdef DEBUG
 	Log( LOG_DEBUG, "Shutting down all connections ..." );
+#endif
 
 #ifdef RENDEZVOUS
 	Rendezvous_UnregisterListeners( );
@@ -165,12 +169,16 @@ Conn_Exit( VOID )
 			if( FD_ISSET( i, &My_Listeners ))
 			{
 				close( i );
+#ifdef DEBUG
 				Log( LOG_DEBUG, "Listening socket %d closed.", i );
+#endif
 			}
 			else if( FD_ISSET( i, &My_Connects ))
 			{
 				close( i );
+#ifdef DEBUG
 				Log( LOG_DEBUG, "Connection %d closed during creation (socket %d).", idx, i );
+#endif
 			}
 			else if( idx < Pool_Size )
 			{
@@ -225,7 +233,9 @@ Conn_ExitListeners( VOID )
 		if( FD_ISSET( i, &My_Sockets ) && FD_ISSET( i, &My_Listeners ))
 		{
 			close( i );
+#ifdef DEBUG
 			Log( LOG_DEBUG, "Listening socket %d closed.", i );
+#endif
 		}
 	}
 } /* Conn_ExitListeners */
@@ -368,10 +378,13 @@ Conn_Handler( VOID )
 		Check_Servers( );
 		Check_Connections( );
 
+		t = time( NULL );
+
 		/* noch volle Lese-Buffer suchen */
 		for( i = 0; i < Pool_Size; i++ )
 		{
-			if(( My_Connections[i].sock > NONE ) && ( My_Connections[i].rdatalen > 0 ))
+			if(( My_Connections[i].sock > NONE ) && ( My_Connections[i].rdatalen > 0 ) &&
+			 ( My_Connections[i].delaytime < t ))
 			{
 				/* Kann aus dem Buffer noch ein Befehl extrahiert werden? */
 				if( Handle_Buffer( i )) timeout = FALSE;
@@ -400,7 +413,6 @@ Conn_Handler( VOID )
 		}
 
 		/* von welchen Sockets koennte gelesen werden? */
-		t = time( NULL );
 		read_sockets = My_Sockets;
 		for( i = 0; i < Pool_Size; i++ )
 		{
@@ -431,7 +443,7 @@ Conn_Handler( VOID )
 
 		/* Timeout initialisieren */
 		tv.tv_usec = 0;
-		if( timeout ) tv.tv_sec = TIME_RES;
+		if( timeout ) tv.tv_sec = 1;
 		else tv.tv_sec = 0;
 
 		/* Auf Aktivitaet warten */
@@ -545,7 +557,9 @@ Conn_Write( CONN_ID Idx, CHAR *Data, INT Len )
 	 * In diesem Fall wird hier einfach ein Fehler geliefert. */
 	if( My_Connections[Idx].sock <= NONE )
 	{
+#ifdef DEBUG
 		Log( LOG_DEBUG, "Skipped write on closed socket (connection %d).", Idx );
+#endif
 		return FALSE;
 	}
 
@@ -854,7 +868,9 @@ Handle_Write( CONN_ID Idx )
 
 			return FALSE;
 		}
+#ifdef DEBUG
 		Log( LOG_DEBUG, "Connection %d with \"%s:%d\" established, now sendig PASS and SERVER ...", Idx, My_Connections[Idx].host, Conf_Server[Conf_GetServer( Idx )].port );
+#endif
 
 		/* PASS und SERVER verschicken */
 		Conn_WriteStr( Idx, "PASS %s %s", Conf_Server[Conf_GetServer( Idx )].pwd_out, NGIRCd_ProtoID );
@@ -995,9 +1011,13 @@ New_Connection( INT Sock )
 			/* Struktur umkopieren ... */
 			memcpy( ptr, My_Connections, sizeof( CONNECTION ) * Pool_Size );
 
+#ifdef DEBUG
 			Log( LOG_DEBUG, "Allocated new connection pool for %ld items (%ld bytes). [malloc()/memcpy()]", new_size, sizeof( CONNECTION ) * new_size );
+#endif
 		}
+#ifdef DEBUG
 		else Log( LOG_DEBUG, "Allocated new connection pool for %ld items (%ld bytes). [realloc()]", new_size, sizeof( CONNECTION ) * new_size );
+#endif
 
 		/* Adjust pointer to new block */
 		My_Connections = ptr;
@@ -1061,7 +1081,9 @@ Socket2Index( INT Sock )
 	{
 		/* die Connection wurde vermutlich (wegen eines
 		 * Fehlers) bereits wieder abgebaut ... */
+#ifdef DEBUG
 		Log( LOG_DEBUG, "Socket2Index: can't get connection for socket %d!", Sock );
+#endif
 		return NONE;
 	}
 	else return idx;
@@ -1164,6 +1186,9 @@ Handle_Buffer( CONN_ID Idx )
 	result = FALSE;
 	do
 	{
+		/* Check penalty */
+		if( My_Connections[Idx].delaytime > time( NULL )) return result;
+		
 #ifdef USE_ZLIB
 		/* ggf. noch unkomprimiete Daten weiter entpacken */
 		if( My_Connections[Idx].options & CONN_ZIP )
@@ -1243,7 +1268,9 @@ Handle_Buffer( CONN_ID Idx )
 					memcpy( My_Connections[Idx].zip.rbuf, My_Connections[Idx].rbuf, My_Connections[Idx].rdatalen );
 					My_Connections[Idx].zip.rdatalen = My_Connections[Idx].rdatalen;
 					My_Connections[Idx].rdatalen = 0;
+#ifdef DEBUG
 					Log( LOG_DEBUG, "Moved already received data (%d bytes) to uncompression buffer.", My_Connections[Idx].zip.rdatalen );
+#endif
 				}
 			}
 #endif
@@ -1280,14 +1307,18 @@ Check_Connections( VOID )
 				if( My_Connections[i].lastping < time( NULL ) - Conf_PongTimeout )
 				{
 					/* Timeout */
+#ifdef DEBUG
 					Log( LOG_DEBUG, "Connection %d: Ping timeout: %d seconds.", i, Conf_PongTimeout );
+#endif
 					Conn_Close( i, NULL, "Ping timeout", TRUE );
 				}
 			}
 			else if( My_Connections[i].lastdata < time( NULL ) - Conf_PingTimeout )
 			{
 				/* es muss ein PING gesendet werden */
+#ifdef DEBUG
 				Log( LOG_DEBUG, "Connection %d: sending PING ...", i );
+#endif
 				My_Connections[i].lastping = time( NULL );
 				Conn_WriteStr( i, "PING :%s", Client_ID( Client_ThisServer( )));
 			}
@@ -1298,7 +1329,9 @@ Check_Connections( VOID )
 			if( My_Connections[i].lastdata < time( NULL ) - Conf_PingTimeout )
 			{
 				/* Timeout */
+#ifdef DEBUG
 				Log( LOG_DEBUG, "Connection %d timed out ...", i );
+#endif
 				Conn_Close( i, NULL, "Timeout", FALSE );
 			}
 		}
@@ -1354,7 +1387,9 @@ Check_Servers( VOID )
 			Log( LOG_ALERT, "Can't establist server connection: connection limit reached (%d)!", Pool_Size );
 			return;
 		}
+#ifdef DEBUG
 		Log( LOG_DEBUG, "Preparing connection %d for \"%s\" ...", idx, Conf_Server[i].host );
+#endif
 
 		/* Verbindungs-Struktur initialisieren */
 		Init_Conn_Struct( idx );
@@ -1466,7 +1501,9 @@ New_Server( INT Server, CONN_ID Idx )
 	FD_SET( new_sock, &My_Connects );
 	if( new_sock > Conn_MaxFD ) Conn_MaxFD = new_sock;
 
+#ifdef DEBUG
 	Log( LOG_DEBUG, "Registered new connection %d on socket %d.", Idx, My_Connections[Idx].sock );
+#endif
 } /* New_Server */
 
 
@@ -1563,11 +1600,15 @@ Read_Resolver_Result( INT r_fd )
 		/* Opsa! Keine passende Connection gefunden!? Vermutlich
 		 * wurde sie schon wieder geschlossen. */
 		close( r_fd );
+#ifdef DEBUG
 		Log( LOG_DEBUG, "Resolver: Got result for unknown connection!?" );
+#endif
 		return;
 	}
 
+#ifdef DEBUG
 	Log( LOG_DEBUG, "Resolver: %s is \"%s\".", My_Connections[i].host, result );
+#endif
 
 	/* Aufraeumen */
 	close( My_Connections[i].res_stat->pipe[0] );
